# udar

./: .coveragerc  .gitattributes  .gitignore  MANIFEST.in  README.md  hfst_vislcg3_versions.txt  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: build_wheels.yml  ci.yml  macos_test.yml  publish.yml  pythonpackage.yml
dev/: README.md  qa.sh
docs/: conf.py  index.rst
docs/class/: Document.rst  Reading.rst  Sentence.rst  Subreading.rst  Tag.rst  Token.rst
scripts/: post-commit.py
src/udar/: __init__.py  convenience.py  document.py  fsts.py  misc.py  reading.py  sentence.py  subreading.py  tag.py  tok.py
src/udar/conversion/: OC_conflicts.py  OC_tags.py  UD_conflicts.py
src/udar/experiments/stress_corpus/: difficult-talk.ref  matryoshka.ref  pilot-doctor2.ref  sample-first-russian-reader.ref  shady.ref
src/udar/features/: feature.py  feature_extractor.py  features.py  lexical_complexity.py  lexical_familiarity.py  lexical_variability.py  normalized_length.py  priors.py  sentence.py
src/udar/resources/: Sharoff_lem_freq_dict.pkl  Sharoff_lem_freq_rank_dict.pkl  disambiguator.cg3
src/udar/resources/src/: README.md  aspectPairs.tsv  make_pkls.py
src/udar/util/: identify_L2_toks.py
test/: test_README.py  test_convenience.py  test_document.py  test_features.py  test_fsts.py  test_lookup.py  test_misc.py  test_reading.py  test_sentence.py  test_stressify.py  test_subreading.py  test_tag.py  test_text.py  test_tok.py
test/resources/: sent1.txt
udar/: __init__.py  __main__.py  convenience.py  document.py  features.py  fsts.py  misc.py  reading.py  sentence.py  subreading.py  tag.py  text.py  tok.py  transliterate.py  udar_tags.tsv  xlit.py
udar/conversion/: OC_conflicts.py  external2udar.py
udar/experiments/: stress_experiment.py
udar/experiments/stress_corpus/: anna_karenina.ref  anna_karenina2.ref  difficult-talk.ref  matryoshka.ref  meaning-of-life.ref  nervous-buyer.ref  pilot-doctor1.ref  robot.ref  salesperson.ref  shady.ref  too-different.ref
udar/features/: __init__.py  absolute_length.py  discourse.py  feature_extractor.py  features.py  lexical_complexity.py  lexical_familiarity.py  lexical_variability.py  morphology.py  normalized_length.py  priors.py  readability.py  syntax.py
udar/resources/: Sharoff_lem_freq_dict.pkl  Sharoff_lem_freq_rank_dict.pkl  Tix_morph_count_dict.pkl  disambiguator.cg3  kelly_dict.pkl  lexmin_dict.pkl  udar_tags.tsv
udar/resources/src/: KellyProject_Russian_M3.txt  Sharoff_lemmaFreq.txt  Tixonov.txt  lexmin_A1.txt  lexmin_A2.txt  lexmin_B1.txt  lexmin_B2.txt  make_pkls.py
udar/util/: OC2udar.py  OC_tags.py  identify_L2_toks.py
