[metadata]
name = udar
description = Detailed part-of-speech tagger for (accented) Russian.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/reynoldsnlp/udar
author = Robert Reynolds
author_email = ReynoldsRJR@gmail.com
license = GPL3
license_file = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Framework :: Flake8
    Framework :: Pytest
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Natural Language :: Russian
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Education
    Topic :: Education :: Computer Aided Instruction (CAI)
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Scientific/Engineering :: Human Machine Interfaces
    Topic :: Text Processing :: Linguistic
    Topic :: Utilities
    Typing :: Typed

[options]
packages = find:
install_requires =
    bs4
    fastapi
    hfst
    nltk
    pandas
    pexpect
    sphinx_autodoc_typehints
    stanza>=1.1.1
    uvicorn
python_requires = >2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest >=4.6
    pytest-cov
    pytest-flake8
    pytest-mypy
    pytest-timeout

[flake8]
doctests = True
ignore = N802,N806,W503
max-complexity = 10

[tool:pytest]
testpaths =
    test
norecursedirs = *.egg-info .git .tox corp dev
flake8-ignore = N802,N806,W503
